crates/tmc-langs-cli/tests/snapshots/integration__checkstyle@make__passing-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: crates/tmc-langs-cli/tests/sample_exercises/make/passing-exercise
---
output-kind: output-data
status: finished
message: ran checkstyle
result: executed-command
data: ~

